samples/_failures_safe/1761164368_6a7415_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c52f1678.c: In function ‘main’:
./samples/SAFE/__tmp_c52f1678.c:173:5: error: expected expression at end of input
  173 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_c52f1678.c:173:5: error: expected declaration or statement at end of input
